--- a/styles/main.css
+++ b/styles/main.css
@@ -76,6 +76,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   color: #f5bfaf;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -88,10 +90,15 @@ a {
 }
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
   max-width: 80rem;
   margin: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.row {
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .row, .row > div[class*=col-] {
@@ -101,9 +108,12 @@ a {
 }
 
 .col-centered {
-  justify-content: center; /* center flex items horizontally */
-  align-items: center; /* center single-line flex items vertically */
-  align-content: center; /* center multi-line flex items vertically */
+  justify-content: center;
+  /* center flex items horizontally */
+  align-items: center;
+  /* center single-line flex items vertically */
+  align-content: center;
+  /* center multi-line flex items vertically */
 }
 
 .col-1 {
@@ -154,6 +164,11 @@ a {
   width: 100%;
 }
 
+@media screen and (max-width: 800px) {
+  col-1, .col-2, .col-3, .col-4, .col-5, .col-6, col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+    width: 100%;
+  }
+}
 div[class*=col-] {
   display: flex;
   flex-direction: column;
@@ -169,9 +184,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .subtitle, .button {
   font-family: "Boldfinger", sans-serif;
-  font-weight: bold;
   text-transform: uppercase;
   line-height: 1.2;
+  font-weight: normal;
   color: #f5bfaf;
 }
 
@@ -203,15 +218,20 @@ h1, h2, h3, h4, h5, h6 {
   color: #121c3e;
 }
 
+.mapboxgl-map {
+  min-height: 200px;
+}
+
 .marker {
   background-image: url("../assets/map-icon.png");
   background-size: cover;
   width: 29px;
   height: 37px;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-.margin-vetical-small {
+.margin-vertical-small {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -260,6 +280,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .space-between {
   justify-content: space-between;
+}
+
+.light-shadow {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
 }
 
 /*# sourceMappingURL=main.css.map */
