--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,10 +13,15 @@ $not-white:#fff1e2;
 
 body {
 	background-color: $not-white;
+	color: $dark-blue;
+}
+
+.photo-background {
 	background-image: url("../assets/photo-31.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: $peach;
+
 }
 
 a {
@@ -106,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: "judson", "serif";
 	font-size: 1.5rem;
 	font-weight: bold;
-	color: $not-white;
+	// color: $not-white;
 }
 
 .subtitle, .button {
@@ -208,3 +213,6 @@ h1, h2, h3, h4, h5, h6 {
 	justify-content: space-between;
 }
 
+.bg-white {
+	background-color: white;
+}
