--- a/styles/main.css
+++ b/styles/main.css
@@ -72,6 +72,8 @@ input {
 body {
   background-color: #fff1e2;
   color: #121c3e;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .photo-background {
@@ -79,8 +81,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   color: #f5bfaf;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -111,12 +111,9 @@ a {
 }
 
 .col-centered {
-  justify-content: center;
-  /* center flex items horizontally */
-  align-items: center;
-  /* center single-line flex items vertically */
-  align-content: center;
-  /* center multi-line flex items vertically */
+  justify-content: center; /* center flex items horizontally */
+  align-items: center; /* center single-line flex items vertically */
+  align-content: center; /* center multi-line flex items vertically */
 }
 
 .col-1 {
@@ -225,10 +222,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .marker {
-  background-image: url("..assets/map-icon.png");
+  background-image: url("../assets/map-icon.png");
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 29px;
+  height: 37px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -282,6 +279,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .space-between {
   justify-content: space-between;
+}
+
+.light-shadow {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
 }
 
 .bg-white {
