--- a/styles/main.css
+++ b/styles/main.css
@@ -105,8 +105,7 @@ a {
   max-width: 80rem;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 1rem;
   flex: auto;
   align-self: center;
 }
@@ -196,6 +195,15 @@ col-7,
     width: 100%;
   }
 
+  h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: 1.25rem !important;
+  }
+
   .mobile-hide {
     display: none !important;
   }
@@ -203,6 +211,7 @@ col-7,
   .container {
     max-width: 30rem;
     height: 100%;
+    padding: 0 0.5rem 0.5rem 0.5rem;
   }
 
   .full-height-mobile {
@@ -214,12 +223,52 @@ col-7,
     background-color: transparent !important;
   }
 
+  .info-pane {
+    padding-top: 0 !important;
+  }
+
+  .photo-background {
+    background-image: url("../assets/film-photo-18.jpg");
+    background-attachment: fixed;
+  }
+
+  .logo {
+    height: 10rem;
+    padding: 1rem;
+    width: auto;
+    background: #bf3b15;
+    border-radius: 0 0 10px 10px;
+  }
+
+  .row > div[class*=col-] {
+    padding: 0.5rem;
+  }
+
+  .button {
+    font-size: 0.825rem;
+  }
+
   .info-wrapper {
     background-color: #bf3b15;
-    border-radius: 1rem;
+    border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
+    margin-top: 16rem;
+  }
+
+  .details-wrapper {
+    background: #bf3b15;
+    padding: 0.5rem;
+    border-radius: 10px;
   }
 }
+.buttons-wrapper {
+  flex-direction: row !important;
+  gap: 0.5rem;
+}
+.buttons-wrapper .button {
+  flex: 1;
+}
+
 div[class*=col-] {
   display: flex;
   flex-direction: column;
@@ -291,6 +340,10 @@ h6 {
 
 .margin-bottom-medium {
   margin-bottom: 1rem;
+}
+
+.margin-bottom-small {
+  margin-bottom: 0.5rem;
 }
 
 .padding-top-large {
