--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,8 +50,7 @@ a {
 	max-width: 80rem;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 1rem;
-	padding-right: 1rem;
+	padding: 1rem;
 	flex: auto;
 	align-self: center;
 }
@@ -128,6 +127,7 @@ a {
 
 // Mobile
 @media screen and (max-width: 840px) {
+
 	col-1,
 	.col-2,
 	.col-3,
@@ -143,14 +143,25 @@ a {
 		width: 100%;
 	}
 
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-size: 1.25rem !important;
+		// color: $not-white;
+	}
+
 	.mobile-hide {
 		display: none !important;
 	}
 
 	.container {
 		max-width: 30rem;
-		// align-self: flex-end;
 		height: 100%;
+		padding: 0 0.5rem 0.5rem 0.5rem;
 
 	}
 
@@ -163,10 +174,59 @@ a {
 		background-color: transparent !important;
 	}
 
+	.info-pane {
+		padding-top: 0 !important;
+	}
+
+	.photo-background {
+		background-image: url("../assets/film-photo-18.jpg");
+		// background-position: center -2rem;
+		background-attachment: fixed;
+	}
+
+	.logo {
+		height: 10rem;
+		padding: 1rem;
+		width: auto;
+		background: $red;
+		border-radius: 0 0 10px 10px;
+	}
+
+	.row > div[class*="col-"] {
+		padding: 0.5rem;
+	}
+
+	.button {
+		font-size: 0.825rem;
+	}
+
 	.info-wrapper {
 		background-color: $red;
-		border-radius: 1rem;
+		border-radius: 10px;
 		box-shadow: 0px 3px 6px rgb(0 0 0 / 30%);
+		margin-top: 16rem;
+	}
+
+	.details-wrapper {
+		background: $red;
+		padding: 0.5rem;
+		border-radius: 10px;
+		// margin-bottom: 0.5rem !important;
+	}
+
+}
+
+
+.details-wrapper {
+	// margin-bottom: 1rem;
+}
+
+.buttons-wrapper {
+	flex-direction: row !important;
+	gap: 0.5rem;
+
+	.button {
+		flex: 1;
 	}
 }
 
@@ -250,6 +310,10 @@ h6 {
 
 .margin-bottom-medium {
 	margin-bottom: 1rem;
+}
+
+.margin-bottom-small {
+	margin-bottom: 0.5rem;
 }
 
 .padding-top-large {
