--- a/styles/main.scss
+++ b/styles/main.scss
@@ -69,7 +69,11 @@ a.button {
 .logo {
 	width: 70%;
 	height: auto;
-	padding: 1rem 0;
+	padding: 2rem 0 0;
+}
+
+.logo-wrapper h1 {
+	margin: 0;
 }
 
 // Columns
