--- a/styles/main.css
+++ b/styles/main.css
@@ -327,6 +327,10 @@ h2.boldfinger {
   color: #bf3b15;
 }
 
+p {
+  margin-top: 0;
+}
+
 .subheading {
   font-size: 1.125rem;
   font-style: italic;
