Colors and typo

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -512,6 +512,11 @@ p {
 	justify-content: start !important;
 }
 
+.standard {
+	width: 100%;
+	height: auto;
+}
+
 // Forms
 form {
 	.form-message {
